--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,3 +10,15 @@
     columns: 2 auto;
     display: inline-block;
 }
+
+@media (min-width: 544px) {
+    h4 {font-size:1rem;}
+  }
+
+  @media (min-width: 768px) {  
+    h4 {font-size:1.5rem;} /*1rem = 16px*/
+  }
+
+  .checkbox-parent {
+      min-width: 130px;
+  }
