--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,3 @@
-/* .job {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
-} */
-
 .splitted {
     columns: 2 auto;
     display: inline-block;
@@ -26,4 +18,40 @@
   html, body {
       max-width: 100%;
       overflow-x: hidden;
+  }
+
+  .accordion {
+      width: 100%;
+  }
+
+  .item {
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.12), 
+              1px 1px 10px rgba(0,0,0,0.12), 
+              1px 1px 1px rgba(0,0,0,0.12), 
+              0 1px 1px rgba(0,0,0,0.12);
+    background: transparent;
+    margin-top: 30px;
+    padding: 10px 20px;
+  }
+
+  .title{
+      color: rgba(0, 0, 0, 0.808);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+
+  }
+
+  .content{
+      color: rgb(243, 11, 88);
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.5s cubic-bezier(0,1,0,1);
+  }
+
+  .content.show{
+      height:auto;
+      max-height: 9999px;
+      transition: all 0.5s cubic-bezier(1,0,1,0)
   }
