--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,8 +17,9 @@
   
   html, body {
       max-width: 100%;
-      overflow-x: hidden;
+      overflow-x: unset;
   }
+
 
   .accordion {
       width: 100%;
@@ -31,7 +32,7 @@
               0 1px 1px rgba(0,0,0,0.12);
     background: transparent;
     margin-top: 30px;
-    padding: 10px 20px;
+    font-weight: lighter;
   }
 
   .title{
@@ -40,18 +41,28 @@
       justify-content: space-between;
       align-items: center;
       cursor: pointer;
-
+      padding:10px 20px 10px;
   }
 
   .content{
-      color: rgb(243, 11, 88);
     max-height: 0;
     overflow: hidden;
     transition: all 0.5s cubic-bezier(0,1,0,1);
+    font-size: 1.3em;
+    padding-left: 20px;
   }
 
   .content.show{
       height:auto;
       max-height: 9999px;
       transition: all 0.5s cubic-bezier(1,0,1,0)
+  }
+
+
+  .title:hover {
+    background-color: rgb(240, 240, 240);
+  }
+
+  .expand-image {
+    background-color:#F4B6B9;
   }
