--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,10 +17,35 @@
       min-width: 130px;
   }
   
-  html, body {
+html {
+  max-width: 100%;
+  overflow-x: unset;
+}
+
+body {
       max-width: 100%;
       overflow-x: unset;
-  }
+      height: 100%;
+    }
+
+.main-contact {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.footer{
+  max-width: 100%;
+  overflow: hidden;
+  justify-content: center;
+  text-align: center;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 10px;
+}
+
+
+
 
 
   .accordion {
